--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Roboto+Slab&display=swap" rel="stylesheet">
     <title>porofolio-site</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My portfolio site</h1>
-    <h2>Kaiser hamid sazid</h2>
+    <section class="top_banner">
+    <div class="half_width">
+    <h1>Welcome to</h1>
+    <h2><span class="span1">Kaiser Hamid Sazid</span> World</h2>
+    <h3>I am a novice learner</h3>
+    <p>
+    My name is kaiser Hamid Sazid.I am trying to be a web Developer.
+    So Everybody pray for me so that i can reach my final destination.
+
+    </p>
+    <a target="blank" href="kaiserhamidsazid.io">hire me</a>
+</div>
+    <div class="half_width">
+    <img src="my-bg.png" alt="">
+</div>
+</section>
+<section class="bg_img">
+<div class="half_width">
+
+    <img src="my-bg.png"alt="boy">
+</div>
+<div class="half_width">
+
+    <h1>Dream Big</h1>
+    <h2>Become a Web developer</h2>
+    <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+    <a href="#">DOWNLOAD RESUME</a>
+</div>
+</section>
+<h1>Experinces</h1>
+<section class="experinces">
+
+<div class="div1" id="id_1">
+
+    <h1>Full Stack Developer</h1>
+    <h2 class="span1">2021-Present | Pro Level Developer</h2>
+
+        <P>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</P>
+</div>
+<div class=" div1" id="id_2">
+    <h1>Baby Web Developer</h1>
+    <h2 class="span1">2020-2021 | Programming Hero Learner</h2>
+    <p>
+        They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+    </p>
+</div>
+
+</section>
+<footer>
+    <p>
+        © Peter Parker 2021, a Programming Hero initiative.
+    </p>
+</footer>
 </body>
 </html>
